--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,29 @@
+*.class
+
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+
+# Package Files #
+*.jar
+*.war
+*.ear
+
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
+
+# Adam: temporary files e.g. gedit # 
+*~
+
+# target dir # 
 target/
+
+# Adam: backup files e.g. MySQL Workbench # 
+*.bak
+
+# IDE files
+/.project
 /.settings
 .project
+.idea/
+*.iml
 .classpath
